<resources>
    <string name="app_name">Buy The Best</string>
    <string name="tab_text_1">Pending Orders</string>
    <string name="tab_text_2">All Orders</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_user_register"><u>New User? Register here>></u></string>
    <string name="login_button">Login</string>
    <string name="add_item">Add Item</string>
    <string name="add_category">Add Category</string>
    <string name="signUp_button">Sign Up</string>
    <string name="field_required">This field is required</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>