<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    tools:context=".activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:src="@drawable/grocery" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/lato"
                android:hint="@string/username_hint" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:fontFamily="@font/lato"
                android:id="@+id/password_et"
                android:layout_margin="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_button"
                android:fontFamily="@font/lato"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:id="@+id/login_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_text"
                android:layout_alignBottom="@+id/cardView"
                android:fontFamily="@font/lato"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:text="@string/new_user_register"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        android:layout_below="@+id/cardView"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_pass_et"
        android:layout_alignBottom="@+id/cardView"
        android:layout_marginStart="20dp"
        android:visibility="gone"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="-25dp"
        android:layout_alignParentEnd="true"
        android:text="@string/forgot_password"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="15sp" />



</RelativeLayout>